Removed one keyword

--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "url": "https://github.com/labra/language-shexc/issues"
   },
   "keywords": [
-    "shex", "shexc", "shape expressions", "rdf", "turtle"
-  ],
+    "shex", "shexc", "rdf", "turtle"
+  ]
 }
